--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,5 @@ scp = "^0.13.0"
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.scripts]
-red-connector-sftp = 'red_connector_ssh.main:run_sftp'
+red-connector-ssh = 'red_connector_ssh.main:run_ssh'
+red-convert-ssh-key = 'red_connector_ssh.convert_key:main'
