--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "red-connector-ssh"
 version = "0.5"
-authors = ["Christoph Jansen <Christoph.Jansen@htw-berlin.de>"]
+authors = ["Christoph Jansen <Christoph.Jansen@htw-berlin.de>", "Bruno Schilling <Bruno.Schilling@student.htw-berlin.de>"]
 license = "AGPL-3.0"
 readme = "README.md"
 repository = "https://github.com/curious-containers/red-connector-ssh"
-homepage = "https://curious-containers.github.io/"
+homepage = "https://www.curious-containers.cc/"
 description = "RED Connector SSH is part of the Curious Containers project."
 
 [tool.poetry.dependencies]
