moved convert_ssh_key code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,4 @@ scp = "^0.13.0"
 
 [tool.poetry.scripts]
 red-connector-ssh = 'red_connector_ssh.main:main'
-red-convert-ssh-key = 'red_connector_ssh.convert_key:main'
+red-convert-ssh-key = 'red_connector_ssh.convert_ssh_key.main:main'
